--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-oauth=token
+oauth=Get your token from https://twitchapps.com/tmi/
+WARNING = USING A TOKEN HERE WILL GIVE COMPLETE CONTROL TO THAT ACCOUNT, BE CAREFUL
